zuki-themes (3.34-1-0utopia1) UNRELEASED; urgency=medium

  * New upstream release.
  * Update to debhelper 12 and meson+ninja as build system.
  * Add B-D: sassc, meson

 -- James Lu <james@overdrivenetworks.com>  Sat, 16 Nov 2019 21:33:29 -0800

zuki-themes (3.32-1-0utopia1) unstable; urgency=medium

  * New upstream release.
  * Bump Standards-Version to 4.3.0, no changes needed.
  * Update to debhelper 11.

 -- James Lu <james@overdrivenetworks.com>  Tue, 09 Apr 2019 00:46:07 -0700

zuki-themes (3.24-3-0utopia1) unstable; urgency=medium

  * New upstream release.
  * Bump Standards-Version to 4.1.3, no changes needed.
  * Update my email.

 -- James Lu <james@overdrivenetworks.com>  Thu, 18 Jan 2018 18:58:53 -0800

zuki-themes (3.22-1+git20170409~4fdb5b3-0utopia1) unstable; urgency=medium

  * New upstream release, now with GTK+ 3.22 support.
  * Move Vcs-* URLs to the utopia-repository GitHub.
  * Bump GTK+ dependency to 3.22.

 -- James Lu <bitflip3@gmail.com>  Wed, 12 Apr 2017 17:26:16 -0700

zuki-themes (3.20.1-1) unstable; urgency=medium

  * Initial Debian release. (Closes: #834278)

 -- James Lu <bitflip3@gmail.com>  Tue, 16 Aug 2016 10:40:04 -0700