@@ -5,7 +5,7 @@ Maintainer: James Lu <james@overdrivenetworks.com>
 Build-Depends: debhelper-compat (= 12),
                meson,
                sassc
-Standards-Version: 4.3.0
+Standards-Version: 4.4.1
 Homepage: https://github.com/lassekongo83/zuki-themes
 Vcs-Git: https://github.com/utopia-repository/zuki-themes
 Vcs-Browser: https://github.com/utopia-repository/zuki-themes
